sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:4: error: not found: value debut
  debut=0; fin =getNombreValeurs()-2
  ^AlgCocktailSort2:4: error: not found: value fin
  debut=0; fin =getNombreValeurs()-2
           ^AlgCocktailSort2:7: error: not found: value debut
    for (i<-debut to fin){
            ^AlgCocktailSort2:7: error: not found: value fin
    for (i<-debut to fin){
                     ^AlgCocktailSort2:11: error: not found: value fin
    fin-=1
    ^AlgCocktailSort2:15: error: not found: value fin
    for (i<-fin to debut by -1){
            ^AlgCocktailSort2:15: error: not found: value debut
    for (i<-fin to debut by -1){
                   ^AlgCocktailSort2:23: error: not found: value debut
    debut+=1
    ^AlgCocktailSort2:25: error: type mismatch;
 found   : Unit
 required: Boolean
  }while(inverse=true)
                ^