sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
  var inverse=true
  debut=0; fin =getNombreValeurs()-2
  do {
    inverse=false
    for (i<-debut to fin){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        inverse=true
    fin-=1
    
      }
    }
    for (i<-fin to debut by -1){
      if (plusPetit(i+1,i)){
        echange(i,i+1)
        inverse=true
      
      }
      
    }
    debut+=1
    
  }while(inverse=true)
}